[GM3Restyling] Fixing padding for list items in Ignore Listing page
With this padding fix, the selected line background spans over the
entire line.

Before: https://i.imgur.com/1roQoE7.png
After: https://i.imgur.com/41RR1sN.png
Bug: 368238837
Change-Id: I4fe1968177e0cb231fb91c9d0bd1110fd8ec7eed
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5952203
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
+++ b/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
@@ -15,7 +15,7 @@
 }
 
 .add-button {
-  margin: 10px 2px;
+  padding: var(--sys-size-5) var(--sys-size-6);
   align-self: flex-start;
   flex: none;
 }
@@ -24,9 +24,14 @@
   flex: 0 1 auto;
 }
 
+.custom-exclusion-group {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .ignore-list-item {
-  padding: 3px 5px;
-  height: 30px;
+  padding: var(--sys-size-3) var(--sys-size-5);
+  height: var(--sys-size-13);
   display: flex;
   align-items: center;
   position: relative;
