[settings] Make (?) buttons consistent in settings.
A bunch of adjustments for the (?) buttons:

1. Consistently use "Learn more" as title.
2. When used in combination with a settings checkbox,
   and there's more information, this will be shown as
   tooltip when hovering the checkbox (rather than when
   hovering the (?) icon).
3. Consistently use the `pointer` cursor.

Fixed: 374247106
Change-Id: Ia1e49de4e3e0ea72a17730b6935e358f89c84eaa
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5946885
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
+++ b/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
@@ -9,6 +9,7 @@
 }
 
 .ignore-list-option devtools-button {
+  cursor: pointer;
   position: relative;
   top: var(--sys-size-2);
   margin-left: var(--sys-size-2);
