[Freestyler] Fix disabled color
Does what is describe on the bug + add a line hight so that the text
is centered

Fixed: 372632903
Change-Id: I54fd74d9881642042efccc2eb3dd18708b20c8c9
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5953763
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -554,14 +554,16 @@ main {
 }
 
 .disabled-view {
-  border-radius: var(--sys-shape-corner-small);
-  padding: var(--sys-size-6) var(--sys-size-8);
-  box-shadow: var(--drop-shadow);
-  font: var(--sys-typescale-body4-regular);
-  margin: var(--sys-size-4) 0;
-  max-width: var(--sys-size-34);
   display: flex;
+  max-width: var(--sys-size-34);
+  border-radius: var(--sys-shape-corner-small);
+  box-shadow: var(--sys-elevation-level3);
+  background-color: var(--app-color-card-background);
+  font: var(--sys-typescale-body4-regular);
   text-wrap: pretty;
+  padding: var(--sys-size-6) var(--sys-size-8);
+  margin: var(--sys-size-4) 0;
+  line-height: var(--sys-size-9);
 
   .disabled-view-icon-container {
     border-radius: var(--sys-shape-corner-extra-small);
