[sources] Fix broken focus ring for event listener delete button.
Fixed: 374271939
Change-Id: Id612a9b810a3f05fb128a476e77639b6919419ae
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5939708
Reviewed-by: Yang Guo <yangguo@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/event_listeners/eventListenersView.css
+++ b/front_end/panels/event_listeners/eventListenersView.css
@@ -8,7 +8,7 @@
   padding: 0 0 0 5px;
   overflow: hidden;
   display: flex;
-  min-height: 18px;
+  min-height: var(--sys-size-9);
   align-items: center;
 }
 
@@ -33,11 +33,12 @@
 
 .event-listener-details {
   display: flex;
-  min-height: 18px;
+  min-height: var(--sys-size-9);
   align-items: center;
+  gap: var(--sys-size-2);
 
   devtools-button {
-    height: 18px;
+    height: var(--sys-size-8);
   }
 }
 
