[RPP] Include unsized images to CLS culprits
https://screenshot.googleplex.com/54UR4P4ZKj8NZMm

Bug:373488475
Change-Id: I9b70d65518fea2ad2dc01ef173adef8e66ed7a0d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5933343
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/layoutShiftDetails.css
+++ b/front_end/panels/timeline/components/layoutShiftDetails.css
@@ -33,7 +33,7 @@
   td {
     padding-right: var(--sys-size-4);
     min-width: var(--sys-size-20);
-    max-width: var(--sys-size-24);
+    max-width: var(--sys-size-28);
   }
 }
 
@@ -75,6 +75,12 @@
   padding-right: var(--sys-size-5);
   display: inline-block;
   vertical-align: top;
+}
+
+.culprit {
+  display: inline-flex;
+  flex-direction: row;
+  gap: var(--sys-size-3);
 }
 
 .value {
