[GM3Restyling] Update shortcuts background styles
Before: https://i.imgur.com/d1MAB2P.png
After: https://i.imgur.com/lzVCEHE.png
Bug: 325442844
Change-Id: Ifef42f7cc8187a998ff46cda067818997fe3b7f4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5961999
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/settings/keybindsSettingsTab.css
+++ b/front_end/panels/settings/keybindsSettingsTab.css
@@ -10,18 +10,16 @@
 }
 
 .keybinds-key {
-  padding: 0.1em 0.6em;
-  border: 1px solid var(--sys-color-neutral-outline);
-  font-size: 11px;
-  background-color: var(--sys-color-neutral-container);
-  color: var(--sys-color-on-surface);
-  box-shadow: var(--box-shadow-outline-color);
-  border-radius: 3px;
-  display: inline-block;
-  margin: 0 0.1em;
-  text-shadow: 0 1px 0 var(--sys-color-cdt-base-container);
-  line-height: 1.5;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--sys-size-11);
+  min-width: var(--sys-size-11);
+  font: var(--sys-typescale-body5-medium);
   white-space: nowrap;
+  border-radius: var(--sys-shape-corner-small);
+  background: var(--sys-color-tonal-container);
+  padding: 0px var(--sys-size-4);
 }
 
 .keybinds-list-item {
@@ -56,6 +54,10 @@
 
 .keybinds-error {
   color: var(--sys-color-error);
+}
+
+.keybinds-shortcut {
+  gap: var(--sys-size-4);
 }
 
 .keybinds-list-item.keybinds-editing .keybinds-shortcut {
