[RPP Observations] Log interaction script attribution to console
https://screenshot.googleplex.com/AUdAeCLto86xvb7

Bug: 369100561
Change-Id: I21372b1050be0c581838eae3151cdfcd5fb0cc1c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5958169
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -350,3 +350,13 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   font-weight: var(--ref-typeface-weight-medium);
   margin-bottom: 4px;
 }
+
+.log-extra-details-button {
+  padding: unset;
+  background: unset;
+  border: unset;
+  font: inherit;
+  color: var(--sys-color-primary);
+  text-decoration: underline;
+  cursor: pointer;
+}
