Fix DevTools on DevTools crash using `:last-child` as `:last-child()`
Bug: 375952740
Change-Id: Ia2fd94fc58b1fd083a23d565e868b64cd3594383
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5969658
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/legacy/searchableView.css
+++ b/front_end/ui/legacy/searchableView.css
@@ -109,7 +109,7 @@
       justify-content: center;
     }
 
-    & devtools-button:last-child(devtools-button) {
+    & devtools-button:last-child {
       margin-right: var(--sys-size-4);
     }
   }
