Fix button margins in search bars
This CL makes sure that the margins for the find and replace
search bars are equally big.

Before: https://i.imgur.com/Fh9UXwq.png
After: https://i.imgur.com/dHrADLD.png
Bug: none
Change-Id: I930f31014fc02cd1959a415cf2aaea015605079e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5969659
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/search/searchView.css
+++ b/front_end/panels/search/searchView.css
@@ -53,6 +53,10 @@
       height: var(--sys-size-8);
       margin-right: var(--sys-size-3);
     }
+
+    & > devtools-button:last-child {
+      margin-right: var(--sys-size-4);
+    }
   }
 
   .search-toolbar-input {
