--- a/front_end/ui/legacy/searchableView.css
+++ b/front_end/ui/legacy/searchableView.css
@@ -107,9 +107,6 @@
     & > devtools-button {
       width: var(--sys-size-11);
       justify-content: center;
-    }
-
-    & devtools-button:last-child {
       margin-right: var(--sys-size-4);
     }
   }
@@ -141,6 +138,10 @@
     display: inline-flex;
     grid-row: 1/2;
     grid-column: 2/3;
+
+    & > devtools-button:last-child {
+      margin-right: var(--sys-size-4);
+    }
   }
 
   .toolbar-search-buttons {
