--- a/front_end/ui/legacy/softDropDownButton.css
+++ b/front_end/ui/legacy/softDropDownButton.css
@@ -12,14 +12,18 @@ button.soft-dropdown {
   background: none;
   max-width: 120px;
 
-  devtools-icon {
-    top: 1px;
-  }
-}
+  &[disabled] {
+    background: var(--sys-color-state-disabled-container);
+    color: var(--sys-color-state-disabled);
 
-button.soft-dropdown[disabled] {
-  background: var(--sys-color-state-disabled-container);
-  color: var(--sys-color-state-disabled);
+    devtools-icon {
+      color: var(--sys-color-state-disabled);
+    }
+  }
+
+  devtools-icon {
+    top: var(--sys-size-2);
+  }
 }
 
 button.soft-dropdown > .title {
