[Animations] Render a jump-to icon for animations in styles tab
Fixed: 349566091
Change-Id: Id8a96300c8e9a384ebfae98a1eddd8666548ac02
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5971493
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/elements/stylePropertiesTreeOutline.css
+++ b/front_end/panels/elements/stylePropertiesTreeOutline.css
@@ -275,3 +275,16 @@ devtools-css-angle,
 devtools-css-length {
   display: inline-block;
 }
+
+devtools-icon.open-in-animations-panel {
+  position: relative;
+  transform: scale(0.7);
+  margin: -5px -2px -3px -4px;
+  user-select: none;
+  color: var(--icon-default);
+  cursor: default;
+
+  &:hover {
+    color: var(--icon-default-hover);
+  }
+}
