[Animations] Use `animation` icon for the animation link swatch
Drive-by:
* Add `title` to the icon

Bug: 349566091
Change-Id: Ic21b475cf512c4ddb910a2408f6eb6ffd9d9a3f7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973206
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/front_end/panels/elements/stylePropertiesTreeOutline.css
+++ b/front_end/panels/elements/stylePropertiesTreeOutline.css
@@ -281,10 +281,10 @@ devtools-icon.open-in-animations-panel {
   transform: scale(0.7);
   margin: -5px -2px -3px -4px;
   user-select: none;
-  color: var(--icon-default);
+  color: var(--icon-css);
   cursor: default;
 
   &:hover {
-    color: var(--icon-default-hover);
+    color: var(--icon-css-hover);
   }
 }
