[AI Settings] Add explainer banner if toggles are disabled
Screenshot: https://i.imgur.com/x1XHHXW.png

Fixed: 372182770
Change-Id: I86d8d9a8a472ec89c9f011250da691907fccff69
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5976623
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
(cherry picked from commit b92e8ca684ecc373e50c45343290f7ee0c3b2302)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5984226
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/panels/settings/aiSettingsTab.css
+++ b/front_end/panels/settings/aiSettingsTab.css
@@ -175,3 +175,16 @@ header {
   font-size: var(--sys-typescale-headline3-size);
   font-weight: var(--ref-typeface-weight-regular);
 }
+
+.disabled-explainer {
+  display: flex;
+  gap: var(--sys-size-6);
+  background-color: var(--sys-color-surface-yellow);
+  border-radius: var(--sys-shape-corner-medium-small);
+  margin-top: var(--sys-size-11);
+  padding: var(--sys-size-8) var(--sys-size-11);
+  width: 100%;
+  max-width: var(--sys-size-35);
+  min-width: var(--sys-size-28);
+  color: var(--sys-color-yellow);
+}
