[RPP Observations] Remove help text and defer to a link
Before:
https://screenshot.googleplex.com/BDTz5KK8pyQ9yX8

After:
https://screenshot.googleplex.com/39z8N4N5QV6QJYY

Bug: None
Change-Id: I4ac55fbf650fc861e065ffaf17d30a56364606a1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5981356
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -73,6 +73,11 @@
   margin-bottom: 10px;
 }
 
+.section-title-help {
+  height: var(--sys-typescale-headline4-line-height);
+  vertical-align: top;
+}
+
 .settings-card {
   border-radius: var(--sys-shape-corner-small);
   padding: 14px 16px 16px;
@@ -173,7 +178,7 @@
   summary {
     display: flex;
     align-items: center;
-    padding: 7px 0;
+    padding: 7px 4px;
 
     &::before {
       content: " ";
@@ -280,12 +285,6 @@
 x-link { /* stylelint-disable-line selector-type-no-unknown */
   color: var(--sys-color-primary);
   text-decoration-line: underline;
-}
-
-.data-descriptions {
-  margin-top: 10px;
-  padding-left: 12px;
-  border-left: 1px solid var(--sys-color-divider);
 }
 
 .environment-option {
