[Freestyler] Update the layout and make `main` own the scroller
After moving the `.input-form` inside `main` container,
we switch between it overlaying the messages (with
`position: sticky`) or rendering it after the messages
depending on the `main`s height.

The layout now is:
* `main` now owns the scroller which makes the scroller span
to the end of the `.input-form`.
* when there is empty space between left and right edges of the messages
container and input form (main width > 688px), appearing of scrollbar
is not causing the layout to shift.
* when there isn't empty space between left and right edges of the
messages container and input form (main width <= 688px), appearing
of scrollbar causes the content to jump from right.
* when there isn't empty space between left and right edges of the
messages container, the lines of the message touch the edges.
* the edges of the message & input form is always aligned. (screenshot crbug.com/40248266#comment38)

Drive-by:
* There is now less top padding in `.input-form`.

Fixed: 372317501, 373600025
Change-Id: Id65d56bf7a424c6c3794180e475902221b8ade4e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5975457
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -30,9 +30,36 @@
 .input-form {
   display: flex;
   flex-direction: column;
-  padding: var(--sys-size-8) var(--sys-size-5) 0 var(--sys-size-5);
+  padding: var(--sys-size-5) var(--sys-size-5) 0 var(--sys-size-5);
   max-width: var(--sys-size-36);
+  background-color: var(--sys-color-cdt-base-container);
   width: 100%;
+  position: sticky;
+  z-index: 9999;
+  bottom: 0;
+  /*
+  The `box-shadow` is a workaround to hide the content appearing between the `.input-form`
+  and the footer in some resolutions even though the `.input-form` has `bottom: 0`.
+  */
+  box-shadow: 0 1px var(--sys-color-cdt-base-container);
+
+  /* Prevents the input form from jumping when the scrollbar is shown */
+  /* 688px is the max width of the input form + left and right paddings: var(--sys-size-36) + 2 * var(--sys-size-5)  */
+  /* stylelint-disable-next-line at-rule-no-unknown */
+  @container (width > 688px) {
+    --half-scrollbar-width: calc((100cqw - 100%) / 2); /* stylelint-disable-line unit-no-unknown */
+
+    margin-left: var(--half-scrollbar-width);
+    margin-right: calc(-1 * var(--half-scrollbar-width));
+  }
+
+  /* when there isn't enough space to view the messages,
+  do not overlay the input form on top of the messages */
+  /* height < var(--sys-size-27) */
+  /* stylelint-disable-next-line at-rule-no-unknown */
+  @container (height < 224px) {
+    position: static;
+  }
 }
 
 .chat-input-container {
@@ -102,17 +129,20 @@
   }
 }
 
-.messages-scroll-container {
-  overflow: auto;
-  flex-grow: 1;
-  scrollbar-gutter: stable both-edges;
-  scrollbar-width: thin;
-  width: 100%;
-}
-
 .messages-container {
-  margin: 0 auto;
+  flex-grow: 1;
+  width: 100%;
   max-width: var(--sys-size-36);
+
+  /* Prevents the container from jumping when the scrollbar is shown */
+  /* 688px is the max width of the input form + left and right paddings: var(--sys-size-36) + 2 * var(--sys-size-5)  */
+  /* stylelint-disable-next-line at-rule-no-unknown */
+  @container (width > 688px) {
+    --half-scrollbar-width: calc((100cqw - 100%) / 2); /* stylelint-disable-line unit-no-unknown */
+
+    margin-left: var(--half-scrollbar-width);
+    margin-right: calc(-1 * var(--half-scrollbar-width));
+  }
 }
 
 .chat-message {
@@ -436,20 +466,40 @@ button.link {
 }
 
 main {
+  overflow-x: hidden;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
-  overflow-y: auto;
+  container-type: size; /* stylelint-disable-line property-no-unknown */
+  scrollbar-width: thin;
+  /*
+  Even though `transform: translateZ(1px)` doesn't have a visual effect,
+  it puts `main` element into another rendering layer which somehow
+  fixes the `.input-form` jumping on scroll issue.
+  */
+  transform: translateZ(1px);
 }
 
 .empty-state-container {
+  flex-grow: 1;
   display: grid;
   align-items: center;
   justify-content: center;
   font: var(--sys-typescale-headline4);
   gap: var(--sys-size-11);
   padding: var(--sys-size-3);
+
+  /* Prevents the container from jumping when the scrollbar is shown */
+  /* 688px is the max width of the input form + left and right paddings: var(--sys-size-36) + 2 * var(--sys-size-5)  */
+  /* stylelint-disable-next-line at-rule-no-unknown */
+  @container (width > 688px) {
+    --half-scrollbar-width: calc((100cqw - 100%) / 2); /* stylelint-disable-line unit-no-unknown */
+
+    margin-left: var(--half-scrollbar-width);
+    margin-right: calc(-1 * var(--half-scrollbar-width));
+  }
 
   .header {
     display: flex;
