Adjust card settings margins and paddings
This CL makes two main changes:
1. Unify paddings from different settings pages
2. Increase margins to not crop shadows in narrow view

Drive-by: Slotted elements into contents need to come first since
we rely on a first-child selector, and correctly include the
icon button in Cards.

Fixed: 376194355
Change-Id: I064c84be94c7406d15831122a1cf5fbfe21e0ed2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5979930
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
+++ b/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
@@ -6,6 +6,9 @@
 
 .ignore-list-option {
   flex: none;
+  display: flex;
+  align-items: center;
+  height: var(--sys-size-13);
 }
 
 .ignore-list-option devtools-button {
@@ -25,13 +28,16 @@
   flex: 0 1 auto;
 }
 
+.enable-ignore-listing, .ignore-list-item, .general-exclusion-group {
+  padding-left: var(--sys-size-4);
+}
+
 .custom-exclusion-group {
   padding-left: 0;
   padding-right: 0;
 }
 
 .ignore-list-item {
-  padding: var(--sys-size-3) var(--sys-size-5);
   height: var(--sys-size-13);
   display: flex;
   align-items: center;
